maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:32: error: value setIndication is not a member of Unit
possible cause: maybe a semicolon is missing before `value setIndication'?
    }setIndication(xBiscuit,yBiscuit,0)
     ^JediEscaper:33: error: not found: value remplissage
  remplissage(xBiscuit,yBiscuit)
  ^